--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "user",
+  "name": "vms-portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://venestin.github.io/vms-portfolio/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "npm run lint:types && npm run lint:js && npm run lint:css && npm run check:css-vars && npm run check:css-classes",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "preview": "vite preview",
+    "lint": "npm run lint:types && npm run lint:js && npm run lint:css && npm run check:css-vars && npm run check:css-classes",
     "lint:css": "stylelint \"src/**/*.css\" --fix --quiet",
     "lint:js": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "lint:types": "tsc --noEmit",
@@ -89,6 +92,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "glob": "^13.0.0",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
