Fix Vercel deployment in App.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
+    
+    // IMPORTANT: Ajouter les types
     "types": ["vite/client", "node"]
   },
   "include": ["src"]
